# featlib

./: .gitignore  README.md  pyproject.toml
examples/: poc.py
featlib/: __init__.py  _utils.py  constants.py  core.py  dependencies.py  register.py
